--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="LabelMyNotesValue">Мои заметки</string>
     <string name="imageSharedDescription">ImageShared</string>
     <string name="imageUnsharedDescription">ImageUnshared</string>
+    <string name="note_description_hint">Текст заметки</string>
+    <string name="note_name_hint">Название заметки</string>
 </resources>
