Корректировка визуала форм; добавлен функционал удаления заметок

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="imageUnsharedDescription">ImageUnshared</string>
     <string name="note_description_hint">Текст заметки</string>
     <string name="note_name_hint">Название заметки</string>
+    <string name="edit_toolbar_title">Редактирование</string>
+
+    <dimen name="noteName">28sp</dimen>
 </resources>
